@@ -608,7 +608,6 @@ void check_defect_markers(file const& f)
             &&  "INELEGANT "   != z[1]
             &&  "INPUT "       != z[1]
             &&  "MPATROL "     != z[1]
-            &&  "MSYS "        != z[1]
             &&  "PORT "        != z[1]
             &&  "SOA "         != z[1]
             &&  "SOMEDAY "     != z[1]
